<resources>
    <string name="app_name">Sdetector</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_report">Report</string>
    <string name="title_diary">Diary</string>
    <string name="title_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_report">Report</string>
    <string name="menu_diary">Diary</string>
    <string name="menu_settings">Settings</string>
    <string name="report_app">이번 주 앱 사용 분석 결과 소셜미디어 앱 사용이 평균 10시간, 평균 50회로 가장 많았습니다.</string>
    <string name="report_diary">이번 주 감정 일기 분석 결과 다소 많은 부정적인 단어가 사용되었어요.</string>
    <string name="report_treat">소셜 미디어 사용을 줄이고 충분한 수면, 운동, 건강한 식사 등으로 자신의 몸과 마음을 지켜요!</string>
    <string name="report_total">%s님, 소셜미디어 앱 사용이 많았고 부정적인 단어가 많이 사용된 것으로 보아 이번 한 주는 고단하셨을 것 같아요. 다음 주는 행복한 하루가 되시길 바랍니다.</string>
    <string name="material_calendar_monday">월</string>
    <string name="material_calendar_tuesday">화</string>
    <string name="material_calendar_wednesday">수</string>
    <string name="material_calendar_thursday">목</string>
    <string name="material_calendar_friday">금</string>
    <string name="material_calendar_saturday">토</string>
    <string name="material_calendar_sunday">일</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>