<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sdetector.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_more_graph"
            app:destination="@id/more_graph" />
    </fragment>

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.example.sdetector.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_diary"
        android:name="com.example.sdetector.ui.diary.DiaryFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/fragment_diary" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.sdetector.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/more_graph"
        android:name="com.example.sdetector.Graph3Fragment"
        android:label="앱 사용 시간"
        tools:layout="@layout/fragment_graph3" />
</navigation>